# FlickFindr

./: README.md  docker-compose.yml
backend/: .coverage  main.py  pyproject.toml
backend/ingestion/: generate_embeddings.py  ingest.py
backend/src/: config.py  logging.py
backend/src/db/: core.py  entity.py
backend/src/movies/: models.py  views.py
backend/src/search/: __init__.py  embedding.py  models.py  service.py  views.py
backend/tests/: conftest.py  test_embedding.py  test_search_models.py  test_search_service.py  test_search_views.py  test_semantic_models.py  test_semantic_service.py  test_semantic_views.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: movies.js
frontend/src/components/: CategoryRow.css  CategoryRow.jsx  MovieCard.css  MovieCard.jsx  MovieCarousel.css  MovieCarousel.jsx  Navbar.css  Navbar.jsx
frontend/src/pages/: GenrePage.css  GenrePage.jsx  MovieDetailsPage.css  MovieDetailsPage.jsx  MoviesPage.css  MoviesPage.jsx
