[project]
name = "backend"
version = "0.1.0"
description = "Backend for FlickFindr"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "sqlalchemy",
    "redis",
    "celery",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "flower",
    "pandas",
    "python-dotenv"
]
